# urchinEngineTest

./: .gitignore  CMakeLists.txt  DEV.md  Makefile  README.md
resources/: engine.properties  map.uda  map.xml  mapOld.uda
resources/UI/: butFocus.tga  buttonClick.tga  checkBoxChecked.tga  checkBoxUnchecked.tga  skinUI.xml  textBoxDefault.tga  textBoxFocus.tga  window.tga
resources/UI/SOURCES/: butDefault.xcf  butFocus.xcf
resources/UI/font/: font.fnt
resources/materials/: bench.mtr  book.mtr  capsule.mtr  character.mtr  cone.mtr  cube.mtr  cylinder.mtr  grassGround.mtr  ground.mtr  sphereBox.mtr  table.mtr  wineBottle.mtr
resources/materials/bench/: bench.mtr  bench.uda
resources/materials/book/: book.mtr  book.uda
resources/materials/capsule/: capsule.mtr  capsule.uda
resources/materials/character/: character.uda
resources/materials/characterAnimate/: albedo.tga  armLeft.mtr  armLeft.uda  armRight.uda  head.uda  legRight.uda
resources/materials/cone/: cone.uda
resources/materials/cube/: cube.mtr  cube.uda
resources/materials/cylinder/: cylinder.mtr  cylinder.uda
resources/materials/grass/: grass.uda
resources/materials/ground/: ground.mtr  ground.uda
resources/materials/laser/: laser.uda  laserGreen.uda  laserRed.uda
resources/materials/sphere/: sphere.mtr  sphere.uda
resources/materials/sphereBox/: sphereBox.uda
resources/materials/square/: blue.uda  green.uda  red.uda
resources/materials/table/: table.uda
resources/materials/terrain/: grassGround.uda
resources/materials/wineBottle/: albedo.tga  wineBottle.mtr  wineBottle.uda
resources/models/: bench.urchinMesh  book.urchinMesh  capsule.urchinMesh  character.urchinMesh  characterAnimate.urchinAnim  characterAnimate.urchinMesh  cone.urchinMesh  cube.urchinMesh  cylinder.urchinMesh  grass.urchinMesh  ground.urchinMesh  laser.urchinMesh  laserGreen.urchinMesh  laserRed.urchinMesh  sphere.urchinMesh  sphereBox.urchinMesh  squareBlueTrans.urchinMesh  squareGreenTrans.urchinMesh  squareRedTrans.urchinMesh  table.urchinMesh  train.urchinMesh  treeConiferous.urchinMesh  wineBottle.urchinMesh
resources/models/SOURCES/: bench.blend  book.blend  capsule.blend  character.blend  characterAnimate.blend  cone.blend  cube.blend  cylinder.blend  cylinderLow.blend  ground.blend  laser.blend  sphere.blend  sphereBox.blend  table.blend  train.blend  treeConiferous.blend  wineBottle.blend
resources/models/_source/: bench.blend  character.blend  characterAnimate.blend  cone.blend  cube.blend  cylinder.blend  grass.blend  ground.blend  sphereBox.blend
resources/shaders/: bloomCombine.frag.spv  lighting.frag.spv  taaVelocity.frag.spv  terrainGrass.frag  ui3d.frag.spv
resources/skybox/: XN.tga  XP.tga  YN.tga  YP.tga  ZN.tga  ZP.tga
resources/terrain/: terrainHeight.tga  terrainMask.tga
resources/ui/: skinDefinition.uda  skinDefinition.xml
resources/ui/SOURCES/: textBoxFocus.xcf
resources/ui/_source/: textBoxDefault.xcf  window.xcf
resources/ui/labels/: labels_en.properties
resources/ui/widget/button/: click.tga  default.tga  focus.tga
resources/ui/widget/scrollbar/: cursor.tga  line.tga
resources/ui/widget/slider/: cursor.tga  line.tga
resources/water/: dudvMapToNormal.txt
src/: AbstractScreen.cpp  AbstractScreen.h  InputDevice.h  KeyboardKey.h  Main.cpp  Main.h  MainContext.cpp  MainContext.h  MainDisplayer.cpp  MainDisplayer.h  RenderScreen.cpp  RenderScreen.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  ScreenHandler.cpp  ScreenHandler.h  ScreenSwitcher.cpp  ScreenSwitcher.h  WindowController.cpp  WindowController.h
src/game/: CharacterCamera.cpp  CharacterCamera.h  CloseWindowCmd.cpp  CloseWindowCmd.h  Game.cpp  Game.h  GameRenderer.cpp  GameRenderer.h  UnderWaterEvent.cpp  UnderWaterEvent.h
src/game/npc/: NPCNavigation.cpp  NPCNavigation.h  NPCNavigationEventHandler.cpp  NPCNavigationEventHandler.h
src/util/: CrashHandler.cpp  CrashHandler.h  CrashReporter.cpp  CrashReporter.h
src/utils/: CrashHandler.cpp  CrashHandler.h
